fixed tex again

--- a/bcc.tex
+++ b/bcc.tex
@@ -15,7 +15,7 @@
 \newcommand{\xxScale}{1.15}  % 1.15 for emulateapj
 
 \begin{document}
-\title{BCC Simulation Kappa x Foreground Maps // \small Dillon Brout, Vinu Vikram, Bhuvnesh Jain }
+\title{BCC Simulation Kappa x Foreground Maps \\ \small Dillon Brout, Vinu Vikram, Bhuvnesh Jain }
 
 \textbf{Smoothing}
 
@@ -39,8 +39,6 @@
 
 \textbf{Conclusion}
 
-\bibitem[{Perlmutter {et~al.}(1999)}]{Saul99}
-Perlmutter, S. {et~al.} 1999, \apj, 517, 565
 
 
 
